--- a/index.html
+++ b/index.html
@@ -1,13 +1,84 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<title>شبابيك للستائر</title>
+  <meta charset="UTF-8">
+  <title>شبابيك للستائر</title>
+  <style>
+    body {
+      font-family: Tahoma, Arial;
+      background: #f5f3ef;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      color: #3b2f2f;
+    }
+    header {
+      background: #c8b89a;
+      padding: 30px;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    .container {
+      padding: 40px 20px;
+    }
+    .product {
+      background: #fff;
+      border-radius: 12px;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 400px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+    .product h3 {
+      margin: 10px 0;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 12px 20px;
+      background: #8b6f47;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 14px;
+      color: #777;
+    }
+  </style>
 </head>
-<body style="font-family: Arial; text-align:center;">
-<h1>شبابيك للستائر</h1>
-<p>الموقع يعمل بنجاح 🎉</p>
-<p>اطلب عبر واتساب</p>
-<a href="https://wa.me/9647883002797">اضغط هنا</a>
+<body>
+
+<header>
+  شبابيك للستائر
+</header>
+
+<div class="container">
+  <p>ستائر عصرية – تفصيل حسب الطلب – جودة عالية</p>
+
+  <div class="product">
+    <h3>ستائر صالون</h3>
+    <p>تصاميم فاخرة تناسب جميع الديكورات</p>
+    <a class="btn" href="https://wa.me/964XXXXXXXXXX" target="_blank">
+      اطلب عبر واتساب
+    </a>
+  </div>
+
+  <div class="product">
+    <h3>ستائر غرف نوم</h3>
+    <p>راحة وأناقة بلمسة هادئة</p>
+    <a class="btn" href="https://wa.me/964XXXXXXXXXX" target="_blank">
+      اطلب عبر واتساب
+    </a>
+  </div>
+</div>
+
+<footer>
+  © 2026 شبابيك للستائر
+</footer>
+
 </body>
 </html>
