--- a/index.html
+++ b/index.html
@@ -1,84 +1,151 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>شبابيك للستائر</title>
-  <style>
-    body {
-      font-family: Tahoma, Arial;
-      background: #f5f3ef;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      color: #3b2f2f;
-    }
-    header {
-      background: #c8b89a;
-      padding: 30px;
-      font-size: 28px;
-      font-weight: bold;
-    }
-    .container {
-      padding: 40px 20px;
-    }
-    .product {
-      background: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      margin: 20px auto;
-      max-width: 400px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-    .product h3 {
-      margin: 10px 0;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 12px 20px;
-      background: #8b6f47;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      font-size: 14px;
-      color: #777;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>شبابيك للستائر</title>
+
+<style>
+body{
+    font-family: Tahoma;
+    background:#f5f2ed;
+    margin:0;
+    color:#3b2f2f;
+}
+header{
+    background:linear-gradient(135deg,#c8a165,#8b6b3e);
+    color:white;
+    padding:25px;
+    text-align:center;
+}
+header h1{margin:0;font-size:32px;}
+header p{margin:8px 0 0;}
+
+.container{padding:20px;max-width:1100px;margin:auto;}
+
+.products{
+    display:grid;
+    grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
+    gap:20px;
+}
+
+.product{
+    background:white;
+    border-radius:14px;
+    box-shadow:0 8px 20px rgba(0,0,0,.08);
+    overflow:hidden;
+    text-align:center;
+}
+.product img{
+    width:100%;
+    height:200px;
+    object-fit:cover;
+}
+.product h3{margin:10px 0;}
+.product p{color:#8b6b3e;font-weight:bold;}
+
+.product a{
+    display:block;
+    background:#c8a165;
+    color:white;
+    padding:12px;
+    text-decoration:none;
+    margin:10px;
+    border-radius:10px;
+}
+
+.dashboard{
+    margin-top:50px;
+    background:white;
+    padding:20px;
+    border-radius:15px;
+}
+.dashboard h2{margin-top:0;}
+
+input,button{
+    width:100%;
+    padding:12px;
+    margin:8px 0;
+    border-radius:8px;
+    border:1px solid #ccc;
+    font-size:15px;
+}
+button{
+    background:#8b6b3e;
+    color:white;
+    border:none;
+    cursor:pointer;
+}
+button:hover{opacity:.9;}
+
+footer{
+    text-align:center;
+    padding:15px;
+    color:#777;
+    margin-top:40px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
-  شبابيك للستائر
+    <h1>شبابيك للستائر</h1>
+    <p>تفصيل • بيع • تركيب ستائر</p>
 </header>
 
 <div class="container">
-  <p>ستائر عصرية – تفصيل حسب الطلب – جودة عالية</p>
 
-  <div class="product">
-    <h3>ستائر صالون</h3>
-    <p>تصاميم فاخرة تناسب جميع الديكورات</p>
-    <a class="btn" href="https://wa.me/964XXXXXXXXXX" target="_blank">
-      اطلب عبر واتساب
-    </a>
-  </div>
+    <div class="products" id="products"></div>
 
-  <div class="product">
-    <h3>ستائر غرف نوم</h3>
-    <p>راحة وأناقة بلمسة هادئة</p>
-    <a class="btn" href="https://wa.me/964XXXXXXXXXX" target="_blank">
-      اطلب عبر واتساب
-    </a>
-  </div>
+    <!-- لوحة التحكم -->
+    <div class="dashboard">
+        <h2>لوحة التحكم – إضافة منتج</h2>
+        <input id="name" placeholder="اسم المنتج">
+        <input id="price" placeholder="السعر">
+        <input id="img" placeholder="رابط صورة المنتج">
+        <button onclick="addProduct()">إضافة المنتج</button>
+    </div>
+
 </div>
 
 <footer>
-  © 2026 شبابيك للستائر
+© جميع الحقوق محفوظة – شبابيك للستائر
 </footer>
+
+<script>
+const phone = "009647883002797";
+let products = JSON.parse(localStorage.getItem("products") || "[]");
+
+function render(){
+    document.getElementById("products").innerHTML = "";
+    products.forEach(p=>{
+        document.getElementById("products").innerHTML += `
+        <div class="product">
+            <img src="${p.img}">
+            <h3>${p.name}</h3>
+            <p>${p.price}</p>
+            <a target="_blank"
+               href="https://wa.me/${phone}?text=مرحبا، اريد طلب ${p.name}">
+               اطلب عبر واتساب
+            </a>
+        </div>`;
+    });
+}
+
+function addProduct(){
+    const p = {
+        name: name.value,
+        price: price.value,
+        img: img.value
+    };
+    products.push(p);
+    localStorage.setItem("products",JSON.stringify(products));
+    render();
+    name.value=price.value=img.value="";
+}
+
+render();
+</script>
 
 </body>
 </html>
