--- a/index.html
+++ b/index.html
@@ -1,158 +1,99 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>شبابيك للستائر</title>
-
 <style>
-body{
-    font-family: Tahoma;
-    background:#f5f2ed;
-    margin:0;
-    color:#3b2f2f;
-}
-header{
-    background:linear-gradient(135deg,#c8a165,#8b6b3e);
-    color:white;
-    padding:25px;
-    text-align:center;
-}
-header h1{margin:0;font-size:32px;}
-header p{margin:8px 0 0;}
-
-.container{padding:20px;max-width:1100px;margin:auto;}
-
-.products{
-    display:grid;
-    grid-template-columns:repeat(auto-fill,minmax(220px,1fr));
-    gap:20px;
-}
-
-.product{
-    background:white;
-    border-radius:14px;
-    box-shadow:0 8px 20px rgba(0,0,0,.08);
-    overflow:hidden;
-    text-align:center;
-}
-.product img{
-    width:100%;
-    height:200px;
-    object-fit:cover;
-}
-.product h3{margin:10px 0;}
-.product p{color:#8b6b3e;font-weight:bold;}
-
-.product a{
-    display:block;
-    background:#c8a165;
-    color:white;
-    padding:12px;
-    text-decoration:none;
-    margin:10px;
-    border-radius:10px;
-}
-
-.dashboard{
-    margin-top:50px;
-    background:white;
-    padding:20px;
-    border-radius:15px;
-}
-.dashboard h2{margin-top:0;}
-
-input,button{
-    width:100%;
-    padding:12px;
-    margin:8px 0;
-    border-radius:8px;
-    border:1px solid #ccc;
-    font-size:15px;
-}
-button{
-    background:#8b6b3e;
-    color:white;
-    border:none;
-    cursor:pointer;
-}
-button:hover{opacity:.9;}
-
-footer{
-    text-align:center;
-    padding:15px;
-    color:#777;
-    margin-top:40px;
-}
+  body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f5f0eb;
+    margin: 0;
+    padding: 0;
+    color: #4b3a2d;
+  }
+  header {
+    background-color: #d9b382;
+    padding: 20px;
+    text-align: center;
+    color: white;
+  }
+  header h1 {
+    margin: 0;
+    font-size: 2em;
+  }
+  .container {
+    padding: 20px;
+    max-width: 800px;
+    margin: auto;
+  }
+  .features {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    margin: 20px 0;
+  }
+  .feature {
+    background-color: #fff3e6;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(75, 58, 45, 0.2);
+  }
+  .feature h3 {
+    margin-top: 0;
+    color: #a36a28;
+  }
+  .cta {
+    text-align: center;
+    margin-top: 30px;
+  }
+  .cta a {
+    text-decoration: none;
+    background-color: #d9b382;
+    color: white;
+    padding: 15px 25px;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background-color 0.3s;
+  }
+  .cta a:hover {
+    background-color: #c79c66;
+  }
 </style>
 </head>
-
 <body>
 
 <header>
-    <h1>شبابيك للستائر</h1>
-    <p>تفصيل • بيع • تركيب ستائر</p>
+  <h1>شبابيك للستائر</h1>
+  <p>حيث تتحول النوافذ إلى لوحات فنية!</p>
 </header>
 
 <div class="container">
+  <p>هل تبحث عن ستائر تضيف لمسة أناقة ودفء لمنزلك أو مكتبك؟ في متجر <strong>شبابيك</strong> نقدم لك تشكيلة واسعة من الستائر عالية الجودة التي تناسب جميع الأذواق والمساحات.</p>
+  
+  <div class="features">
+    <div class="feature">
+      <h3>💛 تصاميم متنوعة</h3>
+      <p>ستائر كلاسيكية، مودرن، وستائر رول لتلائم كل غرفة.</p>
+    </div>
+    <div class="feature">
+      <h3>💛 خامات فاخرة</h3>
+      <p>قماش متين، ألوان ثابتة، وخامات صديقة للبيئة.</p>
+    </div>
+    <div class="feature">
+      <h3>💛 تخصيص حسب الطلب</h3>
+      <p>اختر المقاس، اللون، والنمط الذي يناسب ديكورك تمامًا.</p>
+    </div>
+    <div class="feature">
+      <h3>💛 خدمة سريعة ومريحة</h3>
+      <p>توصيل سريع، وتركيب احترافي عند الطلب.</p>
+    </div>
+  </div>
 
-    <div class="products" id="products"></div>
-
-    <!-- لوحة التحكم -->
-   <!-- تسجيل دخول لوحة التحكم -->
-<div class="dashboard" id="loginBox">
-    <h2>دخول لوحة التحكم</h2>
-    <input id="password" type="password" placeholder="كلمة المرور">
-    <button onclick="login()">دخول</button>
+  <div class="cta">
+    <a href="https://wa.me/9647883002797" target="_blank">📲 تواصل عبر واتساب</a>
+  </div>
 </div>
-
-<!-- لوحة التحكم -->
-<div class="dashboard" id="adminPanel" style="display:none">
-    <h2>لوحة التحكم – إضافة منتج</h2>
-    <input id="name" placeholder="اسم المنتج">
-    <input id="price" placeholder="السعر">
-    <input id="img" placeholder="رابط صورة المنتج">
-    <button onclick="addProduct()">إضافة المنتج</button>
-</div>
-
-
-<footer>
-© جميع الحقوق محفوظة – شبابيك للستائر
-</footer>
-
-<script>
-const phone = "009647883002797";
-let products = JSON.parse(localStorage.getItem("products") || "[]");
-
-function render(){
-    document.getElementById("products").innerHTML = "";
-    products.forEach(p=>{
-        document.getElementById("products").innerHTML += `
-        <div class="product">
-            <img src="${p.img}">
-            <h3>${p.name}</h3>
-            <p>${p.price}</p>
-            <a target="_blank"
-               href="https://wa.me/${phone}?text=مرحبا، اريد طلب ${p.name}">
-               اطلب عبر واتساب
-            </a>
-        </div>`;
-    });
-}
-
-function addProduct(){
-    const p = {
-        name: name.value,
-        price: price.value,
-        img: img.value
-    };
-    products.push(p);
-    localStorage.setItem("products",JSON.stringify(products));
-    render();
-    name.value=price.value=img.value="";
-}
-
-render();
-</script>
 
 </body>
 </html>
