--- a/index.html
+++ b/index.html
@@ -6,146 +6,147 @@
 <title>شبابيك للستائر</title>
 
 <style>
-body {
-  font-family: "Segoe UI", sans-serif;
-  background-color: #f5f0eb;
-  margin: 0;
-  color: #4b3a2d;
+
+body{
+font-family:Segoe UI;
+margin:0;
+background:#f5f0eb;
+color:#4b3a2d;
 }
 
-header {
-  background-color: #d9b382;
-  padding: 20px;
-  text-align: center;
-  color: white;
+/* الهيدر */
+
+header{
+background:#d9b382;
+color:white;
+padding:15px;
+display:flex;
+justify-content:space-between;
+align-items:center;
 }
 
-.container {
-  max-width: 1100px;
-  margin: auto;
-  padding: 20px;
+header button{
+background:white;
+color:#a36a28;
+border:none;
+padding:8px 15px;
+cursor:pointer;
+font-weight:bold;
 }
 
-.section-title {
-  text-align: center;
-  margin: 30px 0;
-  color: #a36a28;
+/* الصفحات */
+
+.page{
+display:none;
+padding:20px;
+max-width:1200px;
+margin:auto;
 }
 
-.products {
-  display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
-  gap: 20px;
+.active{
+display:block;
 }
 
-.product {
-  background: white;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+/* المنتجات */
+
+.products{
+display:grid;
+grid-template-columns:repeat(auto-fill,minmax(250px,1fr));
+gap:20px;
 }
 
-.product img {
-  width: 100%;
-  height: 220px;
-  object-fit: cover;
+.product{
+background:white;
+border-radius:10px;
+overflow:hidden;
+box-shadow:0 5px 15px rgba(0,0,0,0.1);
 }
 
-.product-info {
-  padding: 15px;
+.product img{
+width:100%;
+height:220px;
+object-fit:cover;
 }
 
-.price {
-  color: #b77b30;
-  font-weight: bold;
+.product-info{
+padding:15px;
 }
 
-.whatsapp-btn {
-  display: inline-block;
-  margin-top: 10px;
-  background: #25D366;
-  color: white;
-  padding: 8px 12px;
-  border-radius: 6px;
-  text-decoration: none;
+.price{
+color:#b77b30;
+font-weight:bold;
 }
 
-/* لوحة التحكم */
-.admin-panel {
-  background: #fff3e6;
-  padding: 20px;
-  border-radius: 12px;
-  margin-top: 40px;
-  display: none;
+.whatsapp{
+display:inline-block;
+margin-top:10px;
+background:#25D366;
+color:white;
+padding:8px;
+text-decoration:none;
+border-radius:5px;
 }
 
-input {
-  width: 100%;
-  padding: 8px;
-  margin: 5px 0;
+/* لوحة الادمن */
+
+.admin-box{
+background:white;
+padding:20px;
+border-radius:10px;
+max-width:400px;
+margin:auto;
 }
 
-button {
-  background: #d9b382;
-  color: white;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
+input{
+width:100%;
+padding:10px;
+margin:5px 0;
 }
 
-.login-box {
-  text-align: center;
-  margin-top: 20px;
+button{
+padding:10px;
+border:none;
+background:#d9b382;
+color:white;
+cursor:pointer;
 }
+
+.delete{
+background:red;
+margin-top:5px;
+}
+
 </style>
 </head>
 <body>
 
 <header>
-<h1>شبابيك للستائر</h1>
-<p>معرض المنتجات</p>
+
+<div>شبابيك للستائر</div>
+
+<div>
+
+<button onclick="showUser()">الكتالوج</button>
+
+<button onclick="showLogin()">لوحة الادمن</button>
+
+</div>
+
 </header>
 
-<div class="container">
 
-<div class="login-box" id="loginBox">
-<input type="password" id="password" placeholder="ادخل كلمة المرور">
-<button onclick="login()">تسجيل الدخول</button>
-<button onclick="logout()">تسجيل الخروج</button>
-</div>
+<!-- صفحة المستخدم -->
 
-<h2 class="section-title">الكتالوج</h2>
+<div id="userPage" class="page active">
 
-<div class="products" id="products"></div>
+<h2>كتالوج الستائر</h2>
 
-<div class="admin-panel" id="adminPanel">
-
-<h2>لوحة التحكم</h2>
-
-<input id="name" placeholder="اسم المنتج">
-<input id="price" placeholder="السعر">
-<input id="image" placeholder="رابط الصورة">
-
-<button onclick="addProduct()">إضافة المنتج</button>
+<div class="products" id="userProducts"></div>
 
 </div>
 
-</div>
 
-<script>
 
-const ADMIN_PASSWORD = "1234";
+<!-- صفحة تسجيل دخول الادمن -->
 
-let products = JSON.parse(localStorage.getItem("products")) || [];
-
-function renderProducts() {
-  const container = document.getElementById("products");
-  container.innerHTML = "";
-
-  products.forEach(product => {
-    container.innerHTML += `
-      <div class="product">
-        <img src="${product.image}">
-        <div class="product-info">
-          <h3>${product.name}</h3>
-          <div cla
+<div id="loginP
