--- a/index.html
+++ b/index.html
@@ -3,89 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شبابيك للستائر - الفخامة في كل زاوية</title>
+    <title>شبابيك للستائر</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
     
     <style>
         :root {
-            --main-color: #d9b382;
-            --dark-color: #3d2e24;
-            --accent-color: #b77b30;
+            --main-gold: #d9b382;
             --white: #ffffff;
         }
 
-        body {
-            font-family: 'Cairo', sans-serif;
+        body, html {
             margin: 0;
-            background: #fdfaf7;
-            color: var(--dark-color);
+            padding: 0;
+            font-family: 'Cairo', sans-serif;
             overflow-x: hidden;
+            background: #000;
+            height: 100%;
         }
 
-        /* خلفية الستائر المتحركة */
-        .bg-animation {
+        /* حاوية الفيديو لتغطية كامل الشاشة */
+        .video-container {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             z-index: -1;
-            background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), 
-                        url('https://images.unsplash.com/photo-1513519245088-0e12902e5a38?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
-            background-size: cover;
-            opacity: 0.6;
+            overflow: hidden;
         }
 
-        /* تأثير الستائر المتطايرة (CSS Animation) */
-        .curtain-wave {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(1px);
-            z-index: -1;
-            animation: wind-wave 8s infinite ease-in-out;
-        }
-
-        @keyframes wind-wave {
-            0%, 100% { transform: scale(1) skew(0deg); }
-            50% { transform: scale(1.05) skew(1deg); opacity: 0.8; }
+        .video-background {
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            object-fit: cover;
+            filter: brightness(0.5); /* تعتيم الفيديو لبروز المنتجات */
         }
 
         /* الهيدر */
         header {
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(8px);
             padding: 20px 5%;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            border-bottom: 1px solid rgba(255,255,255,0.1);
             position: sticky;
             top: 0;
             z-index: 1000;
         }
 
         .logo { 
-            font-size: 32px; 
+            font-size: 38px; 
             font-weight: 900; 
-            color: var(--accent-color);
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-        }
-
-        .nav-buttons button {
-            background: var(--main-color);
-            color: white;
-            border: none;
-            padding: 12px 25px;
-            border-radius: 30px;
+            color: var(--main-gold);
+            text-shadow: 0 0 15px rgba(217, 179, 130, 0.5);
             cursor: pointer;
-            font-size: 1.1rem;
-            font-weight: bold;
-            transition: 0.4s;
+            user-select: none;
         }
-
-        .nav-buttons button:hover { background: var(--dark-color); transform: scale(1.05); }
 
         /* سلة المشتريات */
         .cart-btn {
@@ -94,184 +75,151 @@
             left: 30px;
             background: #25D366;
             color: white;
-            padding: 18px 30px;
+            padding: 15px 30px;
             border-radius: 50px;
-            box-shadow: 0 8px 25px rgba(37, 211, 102, 0.4);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
             cursor: pointer;
             z-index: 999;
             font-size: 1.2rem;
             font-weight: bold;
             display: flex;
             align-items: center;
-            gap: 15px;
-            border: 2px solid white;
+            gap: 12px;
+            transition: 0.3s;
         }
 
-        /* محتوى الصفحة */
-        .page { display: none; padding: 50px 5%; max-width: 1300px; margin: auto; }
-        .active { display: block; animation: fadeInUp 0.7s ease; }
+        /* الصفحات */
+        .page { display: none; padding: 40px 5%; max-width: 1400px; margin: auto; color: white; }
+        .active { display: block; animation: fadeIn 1s ease; }
 
-        h1 { font-size: 3rem; margin-bottom: 10px; color: var(--dark-color); }
-        h2 { font-size: 2.2rem; }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+        h1 { font-size: 3rem; text-align: center; margin-bottom: 40px; }
 
         /* كروت المنتجات */
         .products-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-            gap: 35px;
-            margin-top: 50px;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 30px;
         }
 
         .product-card {
-            background: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(12px);
             border-radius: 20px;
             overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-            border: 1px solid #eee;
+            border: 1px solid rgba(255,255,255,0.2);
             transition: 0.4s;
         }
 
-        .product-card:hover { transform: translateY(-15px); box-shadow: 0 20px 40px rgba(0,0,0,0.15); }
-
-        .product-card img { width: 100%; height: 350px; object-fit: cover; }
+        .product-card img { width: 100%; height: 380px; object-fit: cover; }
 
         .p-info { padding: 25px; text-align: center; }
-        .p-info h3 { font-size: 1.6rem; margin: 0; }
 
         .p-price { 
-            color: var(--accent-color); 
-            font-size: 1.8rem; 
+            color: var(--main-gold); 
+            font-size: 2rem; 
             font-weight: 900; 
             margin: 15px 0; 
         }
 
         .add-to-cart {
             width: 100%;
-            background: var(--dark-color);
-            color: white;
+            background: var(--main-gold);
+            color: #222;
             border: none;
-            padding: 15px;
+            padding: 12px;
             border-radius: 12px;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: bold;
             cursor: pointer;
-            transition: 0.3s;
         }
 
-        .add-to-cart:hover { background: var(--accent-color); }
-
         /* لوحة التحكم */
-        .admin-box { background: white; padding: 40px; border-radius: 25px; }
-        input { font-size: 1.1rem; padding: 15px; margin-bottom: 15px; border-radius: 10px; border: 1px solid #ddd; width: 100%; box-sizing: border-box;}
-
+        .admin-box { 
+            background: white; 
+            padding: 30px; 
+            border-radius: 20px; 
+            color: #333;
+            max-width: 500px;
+            margin: auto;
+        }
+        input { width: 100%; padding: 12px; margin: 8px 0; border-radius: 8px; border: 1px solid #ddd; }
     </style>
 </head>
 <body>
 
-<div class="bg-animation"></div>
-<div class="curtain-wave"></div>
+<div class="video-container">
+    <video class="video-background" autoplay muted loop playsinline>
+        <source src="https://assets.mixkit.co/videos/preview/mixkit-white-curtains-blowing-in-the-wind-2266-large.mp4" type="video/mp4">
+    </video>
+</div>
 
 <header>
-    <div class="logo">شبابيك للستائر ✨</div>
-    <div class="nav-buttons">
-        <button onclick="showPage('userPage')">المتجر</button>
-        <button onclick="showPage('loginPage')" style="background:transparent; color:var(--dark-color); border:1px solid #ccc;">دخول المشرف</button>
-    </div>
+    <div class="logo" id="mainLogo" onclick="checkAdminClick()">شبابيك للستائر ✨</div>
 </header>
 
-<div class="cart-btn" id="cartFloatingBtn" onclick="sendWhatsApp()">
-    <span id="cartCount" style="background:white; color:#25D366; padding:5px 12px; border-radius:50%;">0</span>
-    <span>إتمام الطلب عبر واتساب</span>
+<div class="cart-btn" onclick="sendWhatsApp()">
+    <span id="cartCount" style="background:white; color:#25D366; padding:2px 10px; border-radius:50%;">0</span>
+    <span>إتمام الطلب</span>
 </div>
 
 <div id="userPage" class="page active">
-    <div style="text-align: center;">
-        <h1>عالم من الأناقة</h1>
-        <p style="font-size: 1.4rem; opacity: 0.8;">اكتشف أرقى أنواع الستائر المودرن والكلاسيك لبيت عصري</p>
-    </div>
+    <h1>أناقة تليق بمنزلك</h1>
     <div class="products-grid" id="userProducts"></div>
-</div>
-
-<div id="loginPage" class="page">
-    <div style="max-width: 500px; margin: auto; text-align: center;" class="admin-box">
-        <h2>تسجيل دخول الإدارة</h2>
-        <input type="password" id="password" placeholder="أدخل كلمة المرور السرية">
-        <button onclick="login()" style="width:100%; padding:15px; background:var(--accent-color); color:white; border:none; border-radius:10px; font-size:1.2rem; cursor:pointer;">دخول</button>
-    </div>
 </div>
 
 <div id="adminPage" class="page">
     <div class="admin-box">
-        <h2>إضافة قطعة جديدة للكتالوج</h2>
-        <input id="name" placeholder="اسم الستارة (مثال: ستارة دانتيل تركي)">
-        <input id="price" type="number" placeholder="السعر بالدينار">
-        <input id="image" placeholder="رابط صورة المنتج">
-        <button onclick="addProduct()" style="width:100%; padding:15px; background:#28a745; color:white; border:none; border-radius:10px; font-size:1.1rem; cursor:pointer;">نشر المنتج الآن</button>
+        <h2 style="text-align: center;">إدارة المتجر</h2>
+        <input id="name" placeholder="اسم المنتج">
+        <input id="price" type="number" placeholder="السعر">
+        <input id="image" placeholder="رابط الصورة">
+        <button onclick="addProduct()" style="width:100%; padding:15px; background:var(--main-gold); border:none; border-radius:10px; font-weight:bold; cursor:pointer;">نشر</button>
+        <hr>
+        <div id="adminProductsGrid"></div>
+        <button onclick="logout()" style="width:100%; margin-top:10px; background:#f4f4f4; border:none; padding:10px; cursor:pointer;">خروج</button>
     </div>
-
-    <h3 style="margin-top:50px;">إدارة المعروضات الحالية</h3>
-    <div id="adminProductsGrid" class="products-grid"></div>
-    <button onclick="logout()" style="margin-top:40px; background:#888; color:white; border:none; padding:10px 30px; border-radius:10px; cursor:pointer;">تسجيل خروج</button>
 </div>
 
 <script>
-    const ADMIN_PASS = "1234";
-    let products = JSON.parse(localStorage.getItem("shababik_pro_db")) || [];
+    let products = JSON.parse(localStorage.getItem("shababik_v3")) || [];
     let cart = [];
+    let clickCount = 0;
+
+    function checkAdminClick() {
+        clickCount++;
+        if (clickCount === 5) {
+            let pass = prompt("رمز الدخول:");
+            if (pass === "1234") showPage('adminPage');
+            clickCount = 0;
+        }
+        setTimeout(() => clickCount = 0, 3000);
+    }
 
     function showPage(pageId) {
         document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
         document.getElementById(pageId).classList.add('active');
         if(pageId === 'userPage') renderUser();
         if(pageId === 'adminPage') renderAdmin();
-        window.scrollTo(0,0);
-    }
-
-    function login() {
-        if(document.getElementById('password').value === ADMIN_PASS) {
-            localStorage.setItem("shababik_admin", "true");
-            showPage('adminPage');
-        } else { alert("كلمة المرور غير صحيحة"); }
-    }
-
-    function logout() {
-        localStorage.removeItem("shababik_admin");
-        showPage('userPage');
     }
 
     function addProduct() {
         const name = document.getElementById("name").value;
         const price = document.getElementById("price").value;
         const image = document.getElementById("image").value;
-        if(!name || !price || !image) return alert("يرجى ملء كافة التفاصيل");
+        if(!name || !price || !image) return alert("أكمل الحقول");
         products.push({ id: Date.now(), name, price, image });
-        localStorage.setItem("shababik_pro_db", JSON.stringify(products));
+        localStorage.setItem("shababik_v3", JSON.stringify(products));
         renderAdmin();
-        alert("تمت إضافة المنتج بنجاح");
-    }
-
-    function deleteProduct(id) {
-        if(confirm("هل تريد حذف هذه الستارة؟")) {
-            products = products.filter(p => p.id !== id);
-            localStorage.setItem("shababik_pro_db", JSON.stringify(products));
-            renderAdmin();
-        }
+        alert("تم الحفظ");
     }
 
     function renderUser() {
         const container = document.getElementById("userProducts");
-        if(products.length === 0) {
-            container.innerHTML = "<p style='grid-column: 1/-1; text-align:center; font-size:1.5rem;'>قريباً.. سيتم رفع الكتالوج الجديد</p>";
-            return;
-        }
         container.innerHTML = products.map(p => `
             <div class="product-card">
-                <img src="${p.image}" onerror="this.src='https://via.placeholder.com/400x500?text=No+Image'">
+                <img src="${p.image}">
                 <div class="p-info">
                     <h3>${p.name}</h3>
                     <div class="p-price">${p.price} د.ع</div>
@@ -284,14 +232,17 @@
     function renderAdmin() {
         const container = document.getElementById("adminProductsGrid");
         container.innerHTML = products.map(p => `
-            <div class="product-card">
-                <img src="${p.image}">
-                <div class="p-info">
-                    <h4>${p.name}</h4>
-                    <button onclick="deleteProduct(${p.id})" style="background:#ff4d4d; color:white; border:none; padding:8px 20px; border-radius:8px; cursor:pointer;">حذف</button>
-                </div>
+            <div style="display:flex; justify-content:space-between; padding:10px; border-bottom:1px solid #eee;">
+                <span>${p.name}</span>
+                <button onclick="deleteProduct(${p.id})" style="color:red; background:none; border:none; cursor:pointer;">حذف</button>
             </div>
         `).join('');
+    }
+
+    function deleteProduct(id) {
+        products = products.filter(p => p.id !== id);
+        localStorage.setItem("shababik_v3", JSON.stringify(products));
+        renderAdmin();
     }
 
     function addToCart(name, price) {
@@ -300,16 +251,14 @@
     }
 
     function sendWhatsApp() {
-        if(cart.length === 0) return alert("يرجى إضافة ستائر للسلة أولاً");
-        let msg = "السلام عليكم شبابيك للستائر، أود الاستفسار عن الطلبية التالية:\n\n";
-        cart.forEach((item, i) => msg += `${i+1}. ${item.name} - ${item.price} د.ع\n`);
+        if(cart.length === 0) return alert("السلة فارغة");
+        let msg = "طلب من شبابيك:\n";
+        cart.forEach((item, i) => msg += `${i+1}. ${item.name}\n`);
         window.open(`https://wa.me/9647883002797?text=${encodeURIComponent(msg)}`);
     }
 
-    window.onload = () => {
-        if(localStorage.getItem("shababik_admin") === "true") showPage('adminPage');
-        else renderUser();
-    };
+    function logout() { showPage('userPage'); }
+    window.onload = renderUser;
 </script>
 
 </body>
